--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "npm-run-all2": "^6.2.3",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "prettier-plugin-vue": "^1.1.6",
     "start-server-and-test": "^2.0.8",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.5.4",
