--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,8 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^6.2.3",
     "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-vue": "^1.1.6",
     "start-server-and-test": "^2.0.8",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.5.4",
